Finalizing index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="icon" type="image/x-icon" href="img/Favicon.png">
     <script src="https://code.jquery.com/jquery-latest.js"></script>
 
-    <!-- Manifest. Dieses muss im Root liegen --> 
+    <!-- Verlinkung des Manifest--> 
     <link rel="manifest" href="manifest.json"> 
+
     <!-- Hintergrundfarbe für iOS --> 
     <meta name="theme-color" content="rgb(120, 134, 107)">
+
     <!-- Apple-Touch-Icons für iOS--> 
     <link rel="apple-touch-icon" sizes="16x16" href="AppImages/ios/16.png"> 
     <link rel="apple-touch-icon" sizes="20x20" href="AppImages/ios/20.png"> 
@@ -42,7 +44,6 @@
 </head>
 
 <body>
-
     <header>
         <div class="navigation" id="start">
           <div class="wrapper flex">
@@ -74,13 +75,11 @@
                   <li><a href="news.html"> News </a></li>
                   <li><a href="toolbar.html"> Toolbar </a></li>
             </ul>
-            
           </label>
         </div>
     </header>
 
     <main>
-
         <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/DEOEn0CjDFs?si=MtKbPr5l8xP3-hun" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
         </iframe>-->
       <div class="wrapper">
@@ -118,7 +117,7 @@
               </button>
               </div>
 
-
+              
               <div class="col-50">
                 <!-- Slideshow container -->
             <div class="slideshow-container">
