Finalizing offline.html

--- a/offline.html
+++ b/offline.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Offline</title>
 
-  <!-- Muss direkt im HTML stehen, wegen offline... Kann sonst nicht geladen werden --> 
+  <!-- Das CSS muss direkt im HTML stehen, wegen offline (keien Internetverbindung)... Es kann sonst nicht geladen werden. --> 
     <style>
       html {
         font-family: arial, sans-serif;
@@ -13,6 +13,7 @@
         width: 100%;
         background-color:  rgb(120, 134, 107);
       }
+
       main {
         max-width: 960px;
         padding: 1rem;
@@ -20,7 +21,6 @@
       }
     </style>
   </head>
-
 
   <body>
     <main>
